Renamed many variables and graphical outputs, added user input in statistics

--- a/Min Priority Queue/MinPriorityQueue.ipynb
+++ b/Min Priority Queue/MinPriorityQueue.ipynb
@@ -5,9 +5,9 @@
    "id": "dc264796-8850-41c0-b997-dc6a48007557",
    "metadata": {},
    "source": [
-    "<font size=\"5\">Copyright 2022 Edward Späth, Frankfurt University of Applied Sciences, FB2, Computer Science\\\n",
-    "No liability or warranty; only for educational and non-commercial purposes\\\n",
-    "See some basic hints for working with Jupyter notebooks in README.md</font>"
+    "### Copyright 2022 Edward Späth, Frankfurt University of Applied Sciences, FB2, Computer Science\n",
+    "### No liability or warranty; only for educational and non-commercial purposes\n",
+    "### See some basic hints for working with Jupyter notebooks in README.md"
    ]
   },
   {
@@ -15,7 +15,7 @@
    "id": "939b39bf-8948-464f-aca0-a22d7c4cd483",
    "metadata": {},
    "source": [
-    "<font size=\"6\">Data Structure Priority Queue</font>"
+    "## Data structure min priority queue"
    ]
   },
   {
@@ -23,7 +23,7 @@
    "id": "b64fc437-51f6-48e9-bd5c-f2be4526d342",
    "metadata": {},
    "source": [
-    "<font size=\"6\">Data Structure for storing Keys with their respective Priorities</font>"
+    "## Data structure for storing keys with their respective priorities"
    ]
   },
   {
@@ -44,7 +44,7 @@
    "id": "cc13b368-fcac-48be-b951-d6b5466e93c0",
    "metadata": {},
    "source": [
-    "<font size=\"6\">Storage for Elements of Priority Queue</font>"
+    "## Storage for elements of min priority queue"
    ]
   },
   {
@@ -54,8 +54,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ELEMENTS = []\n",
-    "HEAPSIZE = 0"
+    "elements = []\n",
+    "heapsize = 0"
    ]
   },
   {
@@ -63,7 +63,7 @@
    "id": "6c922a01-1ee0-4e2e-b399-568480904907",
    "metadata": {},
    "source": [
-    "<font size=\"6\">Function to reset Priority Queue</font>"
+    "## Function to reset min priority queue"
    ]
   },
   {
@@ -74,8 +74,8 @@
    "outputs": [],
    "source": [
     "def reset_pq():\n",
-    "    global ELEMENTS, HEAPSIZE\n",
-    "    ELEMENTS, HEAPSIZE = [], 0"
+    "    global elements, heapsize\n",
+    "    elements, heapsize = [], 0"
    ]
   },
   {
@@ -83,7 +83,7 @@
    "id": "50d382a9-765f-4509-974f-ca77be47c508",
    "metadata": {},
    "source": [
-    "<font size=\"6\">Helper Functions for easier access to Children/Parents of a given Element in Heap</font>"
+    "## Helper functions for easier access to children/parents of a given element in heap"
    ]
   },
   {
@@ -108,7 +108,7 @@
    "id": "8d2b3098-3ca5-40a1-98a7-281c18d0174c",
    "metadata": {},
    "source": [
-    "<font size=\"6\">Implementation of a Priority Queue</font>"
+    "## Implementation of a min priority queue"
    ]
   },
   {
@@ -123,87 +123,87 @@
     "        insert_key(name_input, prio_input)\n",
     "        \n",
     "def insert_key(name_input, prio_input):\n",
-    "        global ELEMENTS, HEAPSIZE\n",
+    "        global elements, heapsize\n",
     "        name_already_exists = False\n",
-    "        for element in ELEMENTS:\n",
+    "        for element in elements:\n",
     "            if element.name == name_input:\n",
     "                name_already_exists = True\n",
     "        if not name_already_exists:\n",
-    "            ELEMENTS.append(Node(name_input, float('inf'))) # float('inf') = positive infinity\n",
-    "            heap_decrease_key(HEAPSIZE, prio_input)\n",
-    "            HEAPSIZE += 1   \n",
+    "            elements.append(Node(name_input, float('inf'))) # float('inf') = positive infinity\n",
+    "            heap_decrease_key(heapsize, prio_input)\n",
+    "            heapsize += 1   \n",
     "        else:\n",
-    "            print(\"\\nThere is already an element named\", name_input, \"Please choose a different Name.\")\n",
+    "            print(\"\\nThere is already an element named\", name_input, \"Please choose a different name.\")\n",
     "            \n",
     "def heap_decrease_key(i, prio_input):\n",
-    "    global ELEMENTS \n",
-    "    if prio_input >= ELEMENTS[i].prio:\n",
+    "    global elements \n",
+    "    if prio_input >= elements[i].prio:\n",
     "        print(\"\\nERROR: New priority must be smaller than old priority\")\n",
     "        return       \n",
-    "    ELEMENTS[i].prio = prio_input   \n",
-    "    while i > 0 and ELEMENTS[parent(i)].prio > ELEMENTS[i].prio:\n",
-    "        ELEMENTS[i], ELEMENTS[parent(i)] = ELEMENTS[parent(i)], ELEMENTS[i]\n",
+    "    elements[i].prio = prio_input   \n",
+    "    while i > 0 and elements[parent(i)].prio > elements[i].prio:\n",
+    "        elements[i], elements[parent(i)] = elements[parent(i)], elements[i]\n",
     "        i = parent(i)\n",
     "        \n",
     "def extract_min():\n",
-    "    global ELEMENTS, HEAPSIZE\n",
-    "    if HEAPSIZE < 1:\n",
-    "        print(\"\\nERROR: Underflow. Cannot extract from an empty Queue\")\n",
+    "    global elements, heapsize\n",
+    "    if heapsize < 1:\n",
+    "        print(\"\\nERROR: Underflow. Cannot extract from an empty priority queue\")\n",
     "        return      \n",
-    "    min_element = ELEMENTS[0]\n",
-    "    HEAPSIZE -= 1\n",
-    "    ELEMENTS[0], ELEMENTS[HEAPSIZE] = ELEMENTS[HEAPSIZE], ELEMENTS[0] # Swaps first Element and last Element to delete the previous first and bubble down the previous last\n",
-    "    ELEMENTS = ELEMENTS[:HEAPSIZE] # Deletes last Element\n",
+    "    min_element = elements[0]\n",
+    "    heapsize -= 1\n",
+    "    elements[0], elements[heapsize] = elements[heapsize], elements[0] # Swaps first element and last element to delete the previous first and bubble down the previous last\n",
+    "    elements = elements[:heapsize] # Deletes last element\n",
     "    min_heapify(0)   \n",
-    "    print(\"\\nElement\", min_element.name, \"with Priority\", min_element.prio, \"has been extracted\")\n",
+    "    print(\"\\nElement\", min_element.name, \"with priority\", min_element.prio, \"has been extracted\")\n",
     "        \n",
     "def min_heapify(i):\n",
-    "    global ELEMENTS, HEAPSIZE\n",
+    "    global elements, heapsize\n",
     "    l = left(i)\n",
     "    r = right(i)   \n",
-    "    if l < HEAPSIZE and ELEMENTS[l].prio < ELEMENTS[i].prio:\n",
+    "    if l < heapsize and elements[l].prio < elements[i].prio:\n",
     "        minimum = l\n",
     "    else:\n",
     "        minimum = i       \n",
-    "    if r < HEAPSIZE and ELEMENTS[r].prio < ELEMENTS[minimum].prio:\n",
+    "    if r < heapsize and elements[r].prio < elements[minimum].prio:\n",
     "        minimum = r   \n",
     "    if minimum != i:\n",
-    "        ELEMENTS[i], ELEMENTS[minimum] = ELEMENTS[minimum], ELEMENTS[i]\n",
+    "        elements[i], elements[minimum] = elements[minimum], elements[i]\n",
     "        min_heapify(minimum)\n",
     "    \n",
     "def reduce_priority(name_to_be_searched, prio_input):\n",
-    "    global ELEMENTS   \n",
+    "    global elements   \n",
     "    key_found = False  \n",
-    "    for index, element in enumerate(ELEMENTS):\n",
+    "    for index, element in enumerate(elements):\n",
     "        if element.name == name_to_be_searched:\n",
     "            key_found = True\n",
     "            at_index = index\n",
     "            break          \n",
     "    if not key_found:      \n",
-    "        print(\"\\nERROR: Element whose Priority you want to decrease does not exist\")\n",
+    "        print(\"\\nERROR: Element whose priority you want to decrease does not exist\")\n",
     "        return     \n",
-    "    if ELEMENTS[at_index].prio <= prio_input: \n",
-    "        print(\"\\nERROR: New Priority of\", ELEMENTS[at_index].name, \n",
-    "              \"is not lower than old Priority! Priority may only ever decrease. Priority stays unchanged\")\n",
+    "    if elements[at_index].prio <= prio_input: \n",
+    "        print(\"\\nERROR: New priority of\", elements[at_index].name, \n",
+    "              \"is not lower than old priority! Priority may only ever decrease. Priority stays unchanged\")\n",
     "        return\n",
     "    heap_decrease_key(at_index, prio_input)\n",
     "    \n",
     "def print_pq(show_name=True, show_prio=True):\n",
-    "    if HEAPSIZE < 1:\n",
-    "        print(\"\\nThe current Priority Queue is empty! Nothing to Print\")\n",
+    "    if heapsize < 1:\n",
+    "        print(\"\\nThe current priority pueue is empty! Nothing to print\")\n",
     "        return \n",
     "    if not show_name and not show_prio:\n",
-    "        print(\"\\nYou have to atleast print the Names or the Priorities\")\n",
+    "        print(\"\\nYou have to atleast print the names or the priorities\")\n",
     "    printarray = [] \n",
-    "    for element in ELEMENTS:\n",
+    "    for element in elements:\n",
     "        if show_name and show_prio:\n",
     "            printarray.append((element.name,element.prio))\n",
     "        elif show_name:\n",
     "            printarray.append(element.name)\n",
     "        else:\n",
     "            printarray.append(element.prio)\n",
-    "    print(\"\\nThe current Priority Queue of size\", HEAPSIZE, \"is: --> Printing Names:\",\n",
-    "           show_name, \"- Printing Priorities:\", show_prio)  \n",
+    "    print(\"\\nThe current priority queue of size\", heapsize, \"is: --> printing names:\",\n",
+    "           show_name, \"- printing priorities:\", show_prio)  \n",
     "    print(printarray)"
    ]
   },
@@ -212,7 +212,7 @@
    "id": "b21b2ad0-3a07-4545-b3ff-df2464a5cc48",
    "metadata": {},
    "source": [
-    "<font size=\"6\">Example with Explanations on how to use Functions</font>"
+    "## Example with explanations on how to use functions"
    ]
   },
   {
@@ -226,64 +226,64 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "The current Priority Queue of size 4 is: --> Printing Names: True - Printing Priorities: True\n",
+      "The current priority queue of size 4 is: --> printing names: True - printing priorities: True\n",
       "[('D', 1), ('B', 2), ('C', 6), ('A', 4)]\n",
       "\n",
-      "The current Priority Queue of size 4 is: --> Printing Names: True - Printing Priorities: False\n",
+      "The current priority queue of size 4 is: --> printing names: True - printing priorities: False\n",
       "['D', 'B', 'C', 'A']\n",
       "\n",
-      "Element D with Priority 1 has been extracted\n",
+      "Element D with priority 1 has been extracted\n",
       "\n",
-      "The current Priority Queue of size 3 is: --> Printing Names: True - Printing Priorities: True\n",
+      "The current priority queue of size 3 is: --> printing names: True - printing priorities: True\n",
       "[('B', 2), ('A', 4), ('C', 6)]\n",
       "\n",
-      "The current Priority Queue of size 4 is: --> Printing Names: True - Printing Priorities: True\n",
+      "The current priority queue of size 4 is: --> printing names: True - printing priorities: True\n",
       "[('B', 2), ('F', 3), ('C', 6), ('A', 4)]\n",
       "\n",
-      "The current Priority Queue of size 4 is: --> Printing Names: False - Printing Priorities: True\n",
+      "The current priority queue of size 4 is: --> printing names: False - printing priorities: True\n",
       "[2, 2, 6, 4]\n"
      ]
     }
    ],
    "source": [
-    "# This list saves the Elements you want to Enqueue at once. The Name of the Key is written in Ticks ('') on the left side of each pair\n",
-    "# The corresponding Priority is written on the right side of each pair\n",
-    "# This example initializes the Priority Queue with a Key named 'A' with Priority 4, another Key named 'B' with Priority 2, etc\n",
-    "# Note that this is a MIN-PRIORITY-QUEUE. The lower the number representing Priority, the higher the Priority (lower is better)\n",
+    "# This list saves the elements you want to enqueue at once. The name of the key is written in Ticks ('') on the left side of each pair\n",
+    "# The corresponding priority is written on the right side of each pair\n",
+    "# This example initializes the priority queue with a key named 'A' with priority 4, another key named 'B' with priority 2, etc\n",
+    "# Note that this is a min priority queue. The lower the number representing priority, the more important the element is\n",
     "\n",
-    "# If you dont want to initialize anything leave the array empty --> \"elements_to_insert = []\"\n",
+    "# If you dont want to initialize anything, leave the array empty --> \"elements_to_insert = []\"\n",
     "# Alternatively remove elements_to_insert from the insert_multiple-function's parameters --> \"insert_multiple()\"\n",
     "\n",
     "elements_to_insert = [('A', 4), ('B', 2), ('C', 6), ('D', 1)]\n",
     "\n",
     "insert_multiple(elements_to_insert)\n",
     "\n",
-    "# Prints the current contents of the Priority Queue aswell as size.\n",
-    "# The Boolean Values allow you to select what you want to be printed.\n",
-    "# In the example below both Name and Priority of each Element will be printed\n",
-    "# Calling print_pq without parameters is the same as both Booleans being True\n",
+    "# Prints the current contents of the priority queue aswell as size.\n",
+    "# The boolean values allow you to select what you want to be printed.\n",
+    "# In the example below both name and priority of each element will be printed\n",
+    "# Calling print_pq without parameters is the same as both booleans being True\n",
     "print_pq(show_name = True, show_prio = True)\n",
     "\n",
     "# If you only want the names to be printed, have \"show_name = True\" and \"show_prio = False\":\n",
     "# Or vice versa\n",
     "print_pq(show_name = True, show_prio = False)\n",
     "\n",
-    "# Extracts the Element with the lowest Priority and Prints what its Data was\n",
+    "# Extracts the element with the lowest priority and prints what its data was\n",
     "extract_min()\n",
     "\n",
     "print_pq(show_name = True, show_prio = True)\n",
     "\n",
-    "# Same Idea as with insert_multiple but only one Element at a time\n",
+    "# Same idea as with insert_multiple but only one element at a time\n",
     "insert_key('F', 3)\n",
     "\n",
     "print_pq(show_name = True, show_prio = True)\n",
     "\n",
-    "# Instead of creating a new unique name, give the name of an existing Element whose Priority you want to change (give new Priority as right value)\n",
+    "# Instead of creating a new unique name, give the name of an existing element whose priority you want to change (give new priority as right value)\n",
     "reduce_priority('F', 2)\n",
     "\n",
     "print_pq(show_name = False, show_prio = True)\n",
     "\n",
-    "reset_pq() # Resets Contents of Priority Queue (ignore)"
+    "reset_pq() # Resets contents of priority queue (ignore)"
    ]
   },
   {
@@ -291,7 +291,7 @@
    "id": "f57a3595-07ab-44ca-bc4c-1232fab46eb0",
    "metadata": {},
    "source": [
-    "<font size=\"6\">Your Tests go here...</font>"
+    "## Your tests go here..."
    ]
   },
   {
@@ -305,10 +305,10 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "The current Priority Queue of size 4 is: --> Printing Names: True - Printing Priorities: True\n",
+      "The current priority queue of size 4 is: --> printing names: True - printing priorities: True\n",
       "[('D', 1), ('B', 2), ('C', 6), ('A', 4)]\n",
       "\n",
-      "The current Priority Queue of size 4 is: --> Printing Names: True - Printing Priorities: True\n",
+      "The current priority queue of size 4 is: --> printing names: True - printing priorities: True\n",
       "[('D', 1), ('B', 2), ('C', 3), ('A', 4)]\n"
      ]
     }
@@ -324,7 +324,7 @@
     "\n",
     "print_pq(show_name = True, show_prio = True)\n",
     "\n",
-    "reset_pq() # Resets Contents of Priority Queue (ignore)"
+    "reset_pq() # Resets contents of priority queue (ignore)"
    ]
   },
   {
@@ -332,7 +332,7 @@
    "id": "a2c64b24-5ead-456c-940e-6c756fe4a95f",
    "metadata": {},
    "source": [
-    "<font size=\"6\">Create your Priority Queue. It will be visualized as a Min-Heap at the very bottom</font>"
+    "## Create your min priority queue. The result will be visualized as a min-heap at the very bottom"
    ]
   },
   {
@@ -425,7 +425,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Graph at 0x7f385c248520>"
+       "<graphviz.graphs.Graph at 0x7fad33d55e50>"
       ]
      },
      "execution_count": 9,
@@ -437,14 +437,14 @@
     "from graphviz import Graph  \n",
     "\n",
     "dot = Graph()\n",
-    "for index in range(len(ELEMENTS)):       \n",
-    "    if left(index) < HEAPSIZE:    \n",
-    "        start = ELEMENTS[index].name + \",\" + str(ELEMENTS[index].prio) # Concatinating the Name of each Element together with its Priority into a single string\n",
-    "        destination = ELEMENTS[left(index)].name + \",\" + str(ELEMENTS[left(index)].prio)\n",
+    "for index in range(len(elements)):       \n",
+    "    if left(index) < heapsize:    \n",
+    "        start = elements[index].name + \",\" + str(elements[index].prio) # Concatinating the Name of each Element together with its Priority into a single string\n",
+    "        destination = elements[left(index)].name + \",\" + str(elements[left(index)].prio)\n",
     "        dot.edge(start,destination)\n",
-    "    if right(index) < HEAPSIZE:\n",
-    "        start = ELEMENTS[index].name + \",\" + str(ELEMENTS[index].prio)\n",
-    "        destination = ELEMENTS[right(index)].name + \",\" + str(ELEMENTS[right(index)].prio)\n",
+    "    if right(index) < heapsize:\n",
+    "        start = elements[index].name + \",\" + str(elements[index].prio)\n",
+    "        destination = elements[right(index)].name + \",\" + str(elements[right(index)].prio)\n",
     "        dot.edge(start,destination)\n",
     "dot"
    ]
