minor change to node attributes

--- a/Graph Traversal/BFS_DFS.ipynb
+++ b/Graph Traversal/BFS_DFS.ipynb
@@ -199,13 +199,18 @@
     "        # Adding the nodes\n",
     "        for node in nodes:\n",
     "            if node.name == currently_visiting[current_step]:\n",
-    "                sub.attr('node', style='filled', fillcolor=COL_NODE_CURRENTLY_VISITING, fontcolor=COL_FC_NODE_CURRENTLY_VISITING)\n",
+    "                corresponding_bg_color = COL_NODE_CURRENTLY_VISITING\n",
+    "                corresponding_font_color = COL_FC_NODE_CURRENTLY_VISITING\n",
     "            elif node.name not in discovered_nodes_steps[current_step] and node.name not in visited_nodes_steps[current_step]: # case 'White'\n",
-    "                sub.attr('node', style='filled', fillcolor=COL_NODE_UNDISCOVERED, fontcolor=COL_FC_NODE_UNDISCOVERED)\n",
+    "                corresponding_bg_color = COL_NODE_UNDISCOVERED\n",
+    "                corresponding_font_color = COL_FC_NODE_UNDISCOVERED\n",
     "            elif node.name not in visited_nodes_steps[current_step]: # case 'Gray'\n",
-    "                sub.attr('node', style='filled', fillcolor=COL_NODE_DISCOVERED, fontcolor=COL_FC_NODE_DISCOVERED)\n",
+    "                corresponding_bg_color = COL_NODE_DISCOVERED\n",
+    "                corresponding_font_color = COL_FC_NODE_DISCOVERED\n",
     "            else: # case 'Black'\n",
-    "                sub.attr('node', style='filled', fillcolor=COL_NODE_VISITED, fontcolor=COL_FC_NODE_VISITED)\n",
+    "                corresponding_bg_color = COL_NODE_VISITED\n",
+    "                corresponding_font_color = COL_FC_NODE_VISITED\n",
+    "            sub.attr('node', style='filled', fillcolor=corresponding_bg_color, fontcolor=corresponding_font_color)\n",
     "            sub.node(str(current_step)+str(node.name), node.name)\n",
     "        # Adding the edges\n",
     "        for node in nodes:\n",
@@ -932,7 +937,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f0ca80aa7c0>"
+       "<graphviz.graphs.Digraph at 0x7fd291f2ed30>"
       ]
      },
      "metadata": {},
@@ -1143,7 +1148,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f0ca80a3250>"
+       "<graphviz.graphs.Digraph at 0x7fd291f2eeb0>"
       ]
      },
      "metadata": {},
@@ -1490,7 +1495,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f0ca80aa7f0>"
+       "<graphviz.graphs.Digraph at 0x7fd291f2ed90>"
       ]
      },
      "metadata": {},
@@ -1825,7 +1830,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f0ca80a1190>"
+       "<graphviz.graphs.Digraph at 0x7fd2921dc9a0>"
       ]
      },
      "metadata": {},
@@ -1974,7 +1979,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f0ca8184be0>"
+       "<graphviz.graphs.Digraph at 0x7fd291676130>"
       ]
      },
      "metadata": {},
@@ -2671,7 +2676,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f0c73215f10>"
+       "<graphviz.graphs.Digraph at 0x7fd291581190>"
       ]
      },
      "metadata": {},
@@ -3311,7 +3316,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f0ca80a3580>"
+       "<graphviz.graphs.Digraph at 0x7fd292221fa0>"
       ]
      },
      "metadata": {},
@@ -3828,7 +3833,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f0ca80a3190>"
+       "<graphviz.graphs.Digraph at 0x7fd2c8508dc0>"
       ]
      },
      "metadata": {},
@@ -4480,7 +4485,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f0c73215bb0>"
+       "<graphviz.graphs.Digraph at 0x7fd291581100>"
       ]
      },
      "metadata": {},
@@ -5120,7 +5125,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f0c732155e0>"
+       "<graphviz.graphs.Digraph at 0x7fd2915816a0>"
       ]
      },
      "metadata": {},
@@ -5434,7 +5439,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f0c730b2130>"
+       "<graphviz.graphs.Digraph at 0x7fd29147c940>"
       ]
      },
      "metadata": {},
@@ -5509,7 +5514,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f0c730b2220>"
+       "<graphviz.graphs.Digraph at 0x7fd29147c550>"
       ]
      },
      "metadata": {},
@@ -5796,7 +5801,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f0c730b2250>"
+       "<graphviz.graphs.Digraph at 0x7fd2913564f0>"
       ]
      },
      "metadata": {},
@@ -5871,7 +5876,7 @@
        "</svg>\n"
       ],
       "text/plain": [
-       "<graphviz.graphs.Digraph at 0x7f0c73044040>"
+       "<graphviz.graphs.Digraph at 0x7fd2913289a0>"
       ]
      },
      "metadata": {},
