set image format back to svg

--- a/Binary Search Tree/BinarySearchTree.ipynb
+++ b/Binary Search Tree/BinarySearchTree.ipynb
@@ -135,10 +135,9 @@
    "outputs": [],
    "source": [
     "import graphviz\n",
-    "# At this moment, the 9th of November 2022, the 'svg' image format is not rendered correctly inside GitHub.\n",
-    "# Therefore the image format is changed from default 'svg' to 'png'\n",
-    "# The link to the issue is here: https://github.com/xflr6/graphviz/issues/182\n",
-    "graphviz.set_jupyter_format('png')\n",
+    "# In case that the rendering inside GitHub will break again, just like described in this GitHub issue\n",
+    "# https://github.com/xflr6/graphviz/issues/182 , then un-comment the line below for a potential fix.\n",
+    "# graphviz.set_jupyter_format('png')\n",
     "def draw_tree(local_tree, current_step=None):\n",
     "    dot = graphviz.Graph()\n",
     "    dot.attr('graph', center='True')\n",
