added visualization options (number of ticks on axes)

--- a/Bubblesort/BubblesortVisualization.ipynb
+++ b/Bubblesort/BubblesortVisualization.ipynb
@@ -75,6 +75,10 @@
     "TEXT_BEFORE_SORTING = \"Before sorting:\"\n",
     "TEXT_AFTER_SORTING = \"After  sorting:\"\n",
     "\n",
+    "# number of ticks on axes\n",
+    "NUM_X_TICKS = 10\n",
+    "NUM_Y_TICKS = 10\n",
+    "\n",
     "# graphical output: width of bars and size of fonts - two settings are given here\n",
     "# use for good readability of fewer sorting steps, e.g. 20-30\n",
     "#BAR_WIDTH = 20\n",
@@ -153,8 +157,8 @@
     "    global steps\n",
     "\n",
     "    # format graph\n",
-    "    plt.xticks(range(0, len(steps)+1, max(1,len(steps)//10)), fontsize=FONTSIZE_AXES)\n",
-    "    plt.yticks(range(0, ARRAY_SIZE, max(1,ARRAY_SIZE//10)), fontsize=FONTSIZE_AXES)\n",
+    "    plt.xticks(range(0, len(steps)+1, max(1,len(steps)//NUM_X_TICKS)), fontsize=FONTSIZE_AXES)\n",
+    "    plt.yticks(range(0, ARRAY_SIZE, max(1,ARRAY_SIZE//NUM_Y_TICKS)), fontsize=FONTSIZE_AXES)\n",
     "    plt.axis([-1, len(steps),-1, ARRAY_SIZE])\n",
     "    #plt.axis('off')\n",
     "    plt.xlabel(\"Sorting steps\", fontsize=FONTSIZE_AXES_LEGEND)\n",
